# tree-scaper

./: .gitignore  README.md  main.py  makefile  pyproject.toml
src/my_project/: config_manager.py  constants.py
src/my_project/configs/: config.yaml
src/tree_scaper/: config_manager.py  constants.py  tree_visualizer.py  utils.py
src/tree_scaper/configs/: config.yaml
src/tree_scaper/data/: augmented_exported_data.json  example_data.json  example_data_export.json
tests/: conftest.py  test_config_manager.py
