[project]
name = "tree-scaper"
version = "0.1.0"
description = "Repository for visualizing tree and forest structures with hierarchical nodes and branches, featuring dynamic layouts, using Python and PyGame."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "logging>=0.4.9.6",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.29",
]

[[tool.mypy.overrides]]
module = ["yaml.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = [
    "I",    # isort-style import sorting
    "ANN",  # annotation rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]